// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

syntax = "proto2";

package sdb;

option cc_generic_services = true;

// All file is visible in worker, we do not need worker Kown MVCC
message File {
  required uint64 file_id = 1;
  required string filename = 2;
}; 

// The greeting service definition.
service Catalog {
  // Sends a greeting
  rpc GetCheckPointFiles(CheckPointFilesRequest) returns (CheckPointFilesReply) {}
  rpc NewFile(NewFileRequest) returns (NewFileReply){}
}

message TableFiles {
  required uint64 table_id = 1;
  repeated File files = 2;
}

message TableVersion {
  required uint64 table_id = 1;
  required uint64 currect_xid = 2;
}

message CheckPointFilesRequest {
  required uint64 xid = 1;
  repeated TableVersion tables_versions = 2;
};

message CheckPointFilesReply {
  required uint64 xid = 1;
  repeated TableFiles tables = 2;
};

message NewFileRequest {
  required uint64 xid = 1; 
};

message NewFileReply {
  required uint64 file_id = 1;
  required string filename = 2;
};
